# agent-runtime-security

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.ko.md  README.md  pyproject.toml
.github/workflows/: test.yml
deploy/api/: .env.example  DEPLOYMENT.md  Dockerfile  nginx.conf.example
docs/: api-extension.md
docs/api/: api-lifecycle.md  api-reference.md  cookbook.md  coverage-matrix.md  coverage.md  integration-guide.md  mcp-protection-pack.md  overview.md  pii-catalog.md  preset-catalog.md  quickstart.md
docs/superpowers/plans/: 2026-04-01-agent-runtime-security.md  2026-04-01-agent-security-runtime.md
docs/superpowers/specs/: agent-runtime-security-mvp-spec.md  agent-security-runtime-mvp-spec.md
eval/api/: decide_eval.json  redact_eval.json  run_eval.py  scan_eval.json
examples/: README.ko.md  README.md  demo.py  langchain_agent.py  langgraph_agent.py  mcp_server.py  policy.yaml
src/asr/: __init__.py  audit.py  config.py  guard.py  guard_config.py  mcp.py  pii.py  policies.py  redaction.py  scanner.py  types.py  utils.py
src/asr/adapters/: __init__.py  langchain.py  langgraph.py
src/asr/api/: __init__.py  auth.py  config.py  enhanced_pii.py  enhanced_scanner.py  main.py  models.py  service.py
src/asr/api/presets/: __init__.py  browser-agent.yaml  customer-support.yaml  data-pipeline.yaml  default.yaml  developer-agent.yaml  devops.yaml  ecommerce.yaml  executive-assistant.yaml  finance.yaml  healthcare.yaml  hr-agent.yaml  internal-agent.yaml  legal.yaml  mcp-server.yaml  research.yaml  sales-ops-agent.yaml  security-ops-agent.yaml
src/asr/api/routes/: __init__.py  decide.py  health.py  redact.py  scan.py
tests/: conftest.py  test_adapter_langchain.py  test_adapter_langgraph.py  test_api.py  test_api_enhanced_pii.py  test_api_enhanced_scanner.py  test_api_extensions.py  test_api_policy_presets.py  test_api_presets.py  test_audit.py  test_blocked_error.py  test_config.py  test_guard.py  test_guard_config_v2.py  test_integration.py  test_mcp.py  test_pii.py  test_pii_korean.py  test_pii_profiles.py  test_policies.py  test_scanner.py  test_scanner_new_patterns.py  test_types.py
tests/fixtures/attacks/content_injection/: base64_instruction.txt  css_hidden_text.html  html_comment_instruction.html  invisible_unicode.txt  markdown_link_payload.md  metadata_injection.html  prompt_injection.txt
tests/fixtures/attacks/exfiltration/: email_with_pii.json  http_post_external.json
tests/fixtures/attacks/tool_control/: path_traversal.json  unknown_tool.json
tests/fixtures/benign/: accessible_hidden_text.html  base64_image_data.txt  developer_comments.html  internal_api_call.json  normal_email.json  normal_markdown.md  normal_news_article.html  safe_file_write.json
