[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime-security"
version = "0.1.0"
description = "Python SDK for agent input scanning, tool-call guardrails, and audit logs"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
pdf = ["pymupdf>=1.23.0"]
mcp = ["mcp>=1.0.0"]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.25.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
